rbx_binary/src/tests/snapshots/rbx_binary__tests__util__faces__input.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_decoded

---
num_types: 1
num_instances: 64
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: Handles
      object_format: 0
      referents:
        - 0
        - 1
        - 2
        - 3
        - 4
        - 5
        - 6
        - 7
        - 8
        - 9
        - 10
        - 11
        - 12
        - 13
        - 14
        - 15
        - 16
        - 17
        - 18
        - 19
        - 20
        - 21
        - 22
        - 23
        - 24
        - 25
        - 26
        - 27
        - 28
        - 29
        - 30
        - 31
        - 32
        - 33
        - 34
        - 35
        - 36
        - 37
        - 38
        - 39
        - 40
        - 41
        - 42
        - 43
        - 44
        - 45
        - 46
        - 47
        - 48
        - 49
        - 50
        - 51
        - 52
        - 53
        - 54
        - 55
        - 56
        - 57
        - 58
        - 59
        - 60
        - 61
        - 62
        - 63
  - Prop:
      type_id: 0
      prop_name: Adornee
      prop_type: Ref
      values:
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Color3
      prop_type: Color3
      values:
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
        - - 0.050980397
          - 0.41176474
          - 0.6745098
  - Prop:
      type_id: 0
      prop_name: Faces
      prop_type: Faces
      values:
        - []
        - - Right
        - - Right
          - Top
        - - Right
          - Top
          - Back
        - - Right
          - Top
          - Back
          - Left
        - - Right
          - Top
          - Back
          - Left
          - Bottom
        - - Right
          - Top
          - Back
          - Left
          - Bottom
          - Front
        - - Right
          - Top
          - Back
          - Left
          - Front
        - - Right
          - Top
          - Back
          - Bottom
        - - Right
          - Top
          - Back
          - Bottom
          - Front
        - - Right
          - Top
          - Back
          - Front
        - - Right
          - Top
          - Left
        - - Right
          - Top
          - Left
          - Bottom
        - - Right
          - Top
          - Left
          - Bottom
          - Front
        - - Right
          - Top
          - Left
          - Front
        - - Right
          - Top
          - Bottom
        - - Right
          - Top
          - Bottom
          - Front
        - - Right
          - Top
          - Front
        - - Right
          - Back
        - - Right
          - Back
          - Left
        - - Right
          - Back
          - Left
          - Bottom
        - - Right
          - Back
          - Left
          - Bottom
          - Front
        - - Right
          - Back
          - Left
          - Front
        - - Right
          - Back
          - Bottom
        - - Right
          - Back
          - Bottom
          - Front
        - - Right
          - Back
          - Front
        - - Right
          - Left
        - - Right
          - Left
          - Bottom
        - - Right
          - Left
          - Bottom
          - Front
        - - Right
          - Left
          - Front
        - - Right
          - Bottom
        - - Right
          - Bottom
          - Front
        - - Right
          - Front
        - - Top
        - - Top
          - Back
        - - Top
          - Back
          - Left
        - - Top
          - Back
          - Left
          - Bottom
        - - Top
          - Back
          - Left
          - Bottom
          - Front
        - - Top
          - Back
          - Left
          - Front
        - - Top
          - Back
          - Bottom
        - - Top
          - Back
          - Bottom
          - Front
        - - Top
          - Back
          - Front
        - - Top
          - Left
        - - Top
          - Left
          - Bottom
        - - Top
          - Left
          - Bottom
          - Front
        - - Top
          - Left
          - Front
        - - Top
          - Bottom
        - - Top
          - Bottom
          - Front
        - - Top
          - Front
        - - Back
        - - Back
          - Left
        - - Back
          - Left
          - Bottom
        - - Back
          - Left
          - Bottom
          - Front
        - - Back
          - Left
          - Front
        - - Back
          - Bottom
        - - Back
          - Bottom
          - Front
        - - Back
          - Front
        - - Left
        - - Left
          - Bottom
        - - Left
          - Bottom
          - Front
        - - Left
          - Front
        - - Bottom
        - - Bottom
          - Front
        - - Front
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ""
        - Right
        - "Right, Top"
        - "Right, Top, Back"
        - "Right, Top, Back, Left"
        - "Right, Top, Back, Left, Bottom"
        - "Right, Top, Back, Left, Bottom, Front"
        - "Right, Top, Back, Left, Front"
        - "Right, Top, Back, Bottom"
        - "Right, Top, Back, Bottom, Front"
        - "Right, Top, Back, Front"
        - "Right, Top, Left"
        - "Right, Top, Left, Bottom"
        - "Right, Top, Left, Bottom, Front"
        - "Right, Top, Left, Front"
        - "Right, Top, Bottom"
        - "Right, Top, Bottom, Front"
        - "Right, Top, Front"
        - "Right, Back"
        - "Right, Back, Left"
        - "Right, Back, Left, Bottom"
        - "Right, Back, Left, Bottom, Front"
        - "Right, Back, Left, Front"
        - "Right, Back, Bottom"
        - "Right, Back, Bottom, Front"
        - "Right, Back, Front"
        - "Right, Left"
        - "Right, Left, Bottom"
        - "Right, Left, Bottom, Front"
        - "Right, Left, Front"
        - "Right, Bottom"
        - "Right, Bottom, Front"
        - "Right, Front"
        - Top
        - "Top, Back"
        - "Top, Back, Left"
        - "Top, Back, Left, Bottom"
        - "Top, Back, Left, Bottom, Front"
        - "Top, Back, Left, Front"
        - "Top, Back, Bottom"
        - "Top, Back, Bottom, Front"
        - "Top, Back, Front"
        - "Top, Left"
        - "Top, Left, Bottom"
        - "Top, Left, Bottom, Front"
        - "Top, Left, Front"
        - "Top, Bottom"
        - "Top, Bottom, Front"
        - "Top, Front"
        - Back
        - "Back, Left"
        - "Back, Left, Bottom"
        - "Back, Left, Bottom, Front"
        - "Back, Left, Front"
        - "Back, Bottom"
        - "Back, Bottom, Front"
        - "Back, Front"
        - Left
        - "Left, Bottom"
        - "Left, Bottom, Front"
        - "Left, Front"
        - Bottom
        - "Bottom, Front"
        - Front
  - Prop:
      type_id: 0
      prop_name: Style
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: Float32
      values:
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: Visible
      prop_type: Bool
      values:
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
        - true
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
        - - 3
          - -1
        - - 4
          - -1
        - - 5
          - -1
        - - 6
          - -1
        - - 7
          - -1
        - - 8
          - -1
        - - 9
          - -1
        - - 10
          - -1
        - - 11
          - -1
        - - 12
          - -1
        - - 13
          - -1
        - - 14
          - -1
        - - 15
          - -1
        - - 16
          - -1
        - - 17
          - -1
        - - 18
          - -1
        - - 19
          - -1
        - - 20
          - -1
        - - 21
          - -1
        - - 22
          - -1
        - - 23
          - -1
        - - 24
          - -1
        - - 25
          - -1
        - - 26
          - -1
        - - 27
          - -1
        - - 28
          - -1
        - - 29
          - -1
        - - 30
          - -1
        - - 31
          - -1
        - - 32
          - -1
        - - 33
          - -1
        - - 34
          - -1
        - - 35
          - -1
        - - 36
          - -1
        - - 37
          - -1
        - - 38
          - -1
        - - 39
          - -1
        - - 40
          - -1
        - - 41
          - -1
        - - 42
          - -1
        - - 43
          - -1
        - - 44
          - -1
        - - 45
          - -1
        - - 46
          - -1
        - - 47
          - -1
        - - 48
          - -1
        - - 49
          - -1
        - - 50
          - -1
        - - 51
          - -1
        - - 52
          - -1
        - - 53
          - -1
        - - 54
          - -1
        - - 55
          - -1
        - - 56
          - -1
        - - 57
          - -1
        - - 58
          - -1
        - - 59
          - -1
        - - 60
          - -1
        - - 61
          - -1
        - - 62
          - -1
        - - 63
          - -1
  - End

